--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
-  "name": "ai-saas",
-=======
   "name": "imaginify",
->>>>>>> 969df3aedb88dbbf6ee96e7b496d3237bbac16f5
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,15 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.12",
-<<<<<<< HEAD
-=======
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
->>>>>>> 969df3aedb88dbbf6ee96e7b496d3237bbac16f5
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
@@ -30,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
